# monorepo

./: .bazelrc  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  WORKSPACE  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
docs/: threat-model.md
docs/dfd/: README.md
services/api/: package.json  tsconfig.json
services/api/src/: index.ts
services/policy/: Cargo.toml
services/policy/src/: main.rs
specs/: TrustModel.cfg  TrustModel.tla
